--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
 <link
-  href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Libre+Baskerville:wght@400;700&display=swap"
+  href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap"
   rel="stylesheet"
 />
